# mruby-atoms3

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  flash2.sh  merge_firmware.sh  repos.json  sdkconfig
src/app/: app.cpp  app.h
src/app/apps/: apps.h
src/app/apps/app_startup_anim/: app_startup_anim.cpp  app_startup_anim.h  img_logo_r.c
src/app/apps/app_template/: app_template.cpp  app_template.h
src/app/apps/app_user_demo/: app_user_demo.cpp  app_user_demo.h
src/app/apps/app_user_demo/view/: view.h
src/app/apps/utils/system/: system.h
src/app/assets/: assets.cpp  assets.h
src/app/assets/fonts/: fonts.h  types.h
src/app/assets/images/: images.h  types.h
src/app/assets/images/app_user_demo/: img_res.h
src/app/assets/images/rgb565_converter/: rgb565_converter.cpp  rgb565_converter.h
src/app/assets/localization/: types.h
src/app/assets/theme/: types.h
src/app/hal/: hal.cpp  hal.h  types.h
src/app/hal/utils/lgfx_fx/: lgfx_fx.cpp  lgfx_fx.h
src/app/shared/: shared.cpp  shared.h  types.h
src/main/: CMakeLists.txt  app_main.cpp
src/main/hal_atom_s3/: hal_atom_s3.h  hal_config.h
src/main/hal_atom_s3/components/: hal_display.cpp  hal_gamepad.cpp  hal_i2c.cpp  hal_imu.cpp  hal_ir.cpp  hal_lvgl.cpp  hal_serial.cpp  hal_watch_dog.cpp  hal_wifi.cpp
src/main/hal_atom_s3/utils/bmi270/src/: bmi270.cpp  bmi270.h
src/main/hal_atom_s3/utils/ir_nec_transceiver/: ir_nec_transceiver.c  ir_nec_transceiver.h
src/main/hal_atom_s3/utils/lp5562/: lp5562.cpp  lp5562.h
src/mruby-atom3/: CMakeLists.txt
tools/: build.sh
(+15 files in other folders)
